--- a/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine. (Complication).xcscheme
+++ b/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine. (Complication).xcscheme
@@ -55,8 +55,10 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/BeFine.">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -64,7 +66,7 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,8 +75,10 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/BeFine.">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -82,7 +86,16 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
+            BuildableName = "BeFine..app"
+            BlueprintName = "BeFine."
+            ReferencedContainer = "container:BeFine.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
