--- a/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine..xcscheme
+++ b/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine..xcscheme
@@ -54,8 +54,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/BeFine.">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -63,7 +65,7 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,8 +73,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/BeFine.">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -80,7 +84,16 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
+            BuildableName = "BeFine..app"
+            BlueprintName = "BeFine."
+            ReferencedContainer = "container:BeFine.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
