--- a/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine. (Complication).xcscheme
+++ b/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine. (Complication).xcscheme
@@ -55,10 +55,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/BeFine.">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -66,7 +64,7 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -75,10 +73,8 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/BeFine.">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -86,16 +82,7 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
-            BuildableName = "BeFine..app"
-            BlueprintName = "BeFine."
-            ReferencedContainer = "container:BeFine.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
