--- a/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine..xcscheme
+++ b/BeFine.xcodeproj/xcshareddata/xcschemes/BeFine..xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/BeFine.">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -65,7 +63,7 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/BeFine.">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
@@ -84,16 +80,7 @@
             BlueprintName = "BeFine."
             ReferencedContainer = "container:BeFine.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "77EE042D282A2BA60076D9A3"
-            BuildableName = "BeFine..app"
-            BlueprintName = "BeFine."
-            ReferencedContainer = "container:BeFine.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
